Added missing status to the mapping configuration

--- a/UUGoogleSync/etc/UUStatusMapping.properties
+++ b/UUGoogleSync/etc/UUStatusMapping.properties
@@ -4,6 +4,7 @@ S37_C03 = NOT_PARTICIPATED
 S37_C04 = NOT_PARTICIPATED
 S10_C02 = ACCEPTED
 S02_C01 = PROPOSED
+S00_C02 = PROPOSED
 S96_C02 = INFORMATION
 S34_C05 = PROBLEM
 S09_C05 = REJECTED
