--- a/UUGoogleSync/.classpath
+++ b/UUGoogleSync/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="etc"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_91"/>
 	<classpathentry kind="lib" path="lib/google-api-client-1.6.0-beta.jar"/>
 	<classpathentry kind="lib" path="lib/google-api-services-calendar-v3-1.3.1-beta.jar"/>
 	<classpathentry kind="lib" path="lib/google-http-client-1.6.0-beta.jar"/>
