Added mapping of state S00_C06

--- a/UUGoogleSync/etc/UUStatusMapping.properties
+++ b/UUGoogleSync/etc/UUStatusMapping.properties
@@ -1,5 +1,6 @@
 S36_C06 = PARTICIPATED
 S36_C02 = PARTICIPATED
+S00_C06 = PARTICIPATED
 S37_C03 = NOT_PARTICIPATED
 S37_C04 = NOT_PARTICIPATED
 S10_C02 = ACCEPTED
